--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,25 @@
 // Navigation code here
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: @nav-bg;
+    color: @nav-font;
+    h1 {
+        font-size: 5rem;
+        padding: 15px;
+    }
+    nav {
+        padding-bottom: 15px;
+        display:flex;
+        justify-content: space-around;
+        width: 26%;
+        a {
+            text-decoration: none;
+            color: @nav-font;
+            font-size: 1.8rem;
+        }
+    }
+
+}
