--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,29 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #F6F6F6;
+  color: #454A59;
+}
+header h1 {
+  font-size: 5rem;
+  padding: 15px;
+}
+header nav {
+  padding-bottom: 15px;
+  display: flex;
+  justify-content: space-around;
+  width: 26%;
+}
+header nav a {
+  text-decoration: none;
+  color: #454A59;
+  font-size: 1.8rem;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
