--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,7 +3,9 @@
 .home {
 
   .intro {
-
+    .topimage {
+      border-radius: 10px;
+    }
     h2 {
       padding: 15px;
     }
@@ -58,6 +60,7 @@
       }
 
       .btn {
+        .custom-btn(@header-font-color, 130px, lavender);
       }
     }
 
