--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,6 +5,10 @@
   .intro {
     .topimage {
       border-radius: 10px;
+      @media @phone {
+        max-width:100%;
+        height:auto;
+      }
     }
     h2 {
       padding: 15px;
@@ -26,6 +30,15 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+      @media @phone {
+        width: 100%;
+        margin: 20px 5%;
+      }
+    }
+    .sky, .launch{
+      @media @phone {
+        display: none;
+      }
     }
   }
 
@@ -47,9 +60,17 @@
     padding: 50px 60px;
     display: flex;
     justify-content: center;
-
+    @media @phone {
+      margin-top: 30px;
+      padding: 20px 20px;
+      flex-direction: column-reverse;
+      align-items: center;
+    }
     .walk-text {
       width: 50%;
+      @media @phone {
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -61,12 +82,20 @@
 
       .btn {
         .custom-btn(@header-font-color, 130px, lavender);
+        @media @phone {
+          .custom-btn(@header-font-color, 95%, lavender);   
+          height: 70px;     
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      @media @phone {
+        width: 100%;
+        padding-bottom: 15px;
+      }
       
       img {
         width: 100%;
@@ -75,4 +104,5 @@
       }
     }
   }
-}// home
+}
+// home
