--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,6 +5,7 @@
   .intro {
     .topimage {
       border-radius: 10px;
+      margin-top:120px;
       @media @phone {
         max-width:100%;
         height:auto;
