--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,9 @@ header {
     .custom-layout(center, center);
     flex-direction: column;
     background-color: @nav-bg;
+    position: fixed; 
+    top: 0; 
+    width: 100%; 
 
     @media @phone {
         max-width: 800px;
